--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Will Tseng
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Some words, numbers, thoughts, and data science
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars3.githubusercontent.com/u/29149660?v=3&s=460
 
 #
 # Flags below are optional
